update Comment and Order